xliff-22/test-suite/core/invalid/bad_UnknownDataRefEndValue.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en" trgLang="fr">
 <file id="f1">
  <unit id="1">
   <originalData>
    <data id="d1">code1</data>
    <data id="d2">code2</data>
   </originalData>
   <segment id="1">
    <source><pc id="1" dataRefStart="d1" dataRefEnd="badId">text</pc></source>
   </segment>
  </unit>
 </file>
</xliff>
